Added bashible and registry secret submodules
