# deckhouse-controller/cmd/deckhouse-controller/register-go-hooks.go
@@ -17,15 +17,10 @@ import (
 	_ "github.com/deckhouse/deckhouse/ee/modules/030-cloud-provider-openstack/hooks"
 	_ "github.com/deckhouse/deckhouse/ee/modules/030-cloud-provider-vcd/hooks"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks"
-	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/bashible"
-	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/bashible/helpers"
-	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/bashible/models"
-	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/bashible/models/config"
-	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/bashible/models/input"
-	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/bashible/models/status"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/helpers"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/https"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/orchestrator"
+	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/orchestrator/bashible"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/orchestrator/incluster-proxy"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/orchestrator/node-services"
 	_ "github.com/deckhouse/deckhouse/ee/modules/038-system-registry/hooks/orchestrator/pki"
